# tp1_ComputacaoGrafica

TP1_CompGrafica/: .gitignore  CMakeLists.txt  main.cpp
TP1_CompGrafica/TP_CCO_Pacote_Dados/TP_CCO_Pacote_Dados/TP1_2D/Nterm_064/: tree2D_Nterm0064_step0008.vtk  tree2D_Nterm0064_step0016.vtk  tree2D_Nterm0064_step0024.vtk  tree2D_Nterm0064_step0032.vtk  tree2D_Nterm0064_step0040.vtk  tree2D_Nterm0064_step0048.vtk  tree2D_Nterm0064_step0056.vtk  tree2D_Nterm0064_step0064.vtk
TP1_CompGrafica/TP_CCO_Pacote_Dados/TP_CCO_Pacote_Dados/TP1_2D/Nterm_128/: tree2D_Nterm0128_step0016.vtk  tree2D_Nterm0128_step0032.vtk  tree2D_Nterm0128_step0048.vtk  tree2D_Nterm0128_step0064.vtk  tree2D_Nterm0128_step0080.vtk  tree2D_Nterm0128_step0096.vtk  tree2D_Nterm0128_step0112.vtk  tree2D_Nterm0128_step0128.vtk
TP1_CompGrafica/TP_CCO_Pacote_Dados/TP_CCO_Pacote_Dados/TP1_2D/Nterm_256/: tree2D_Nterm0256_step0032.vtk  tree2D_Nterm0256_step0064.vtk  tree2D_Nterm0256_step0096.vtk  tree2D_Nterm0256_step0128.vtk  tree2D_Nterm0256_step0160.vtk  tree2D_Nterm0256_step0192.vtk  tree2D_Nterm0256_step0224.vtk  tree2D_Nterm0256_step0256.vtk
TP1_CompGrafica/TP_CCO_Pacote_Dados/TP_CCO_Pacote_Dados/TP2_3D/Nterm_128/: tree3D_Nterm0128_step0016.vtk  tree3D_Nterm0128_step0032.vtk  tree3D_Nterm0128_step0048.vtk  tree3D_Nterm0128_step0064.vtk  tree3D_Nterm0128_step0080.vtk  tree3D_Nterm0128_step0096.vtk  tree3D_Nterm0128_step0112.vtk  tree3D_Nterm0128_step0128.vtk
TP1_CompGrafica/include/glad/: glad.h
TP1_CompGrafica/src/: glad.c
(+16 files in other folders)
